creating param_init.json which contains the settings of our default database config. we can add more databases

--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,5 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-/webDataScience/*/migrations
-/webDataScience/param_init.json
-/dasifo/*
+/*/migrations
+/param_init.json
